--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -2,7 +2,6 @@
 WORKDIR /
 COPY *.sln ./
 COPY WebApplication1/*.csproj ./WebApplication1/
-COPY WebApplication1/. ./WebApplication1/
 RUN dotnet restore ./WebApplication1/WebApplication1.csproj
 
 
@@ -14,7 +13,7 @@ RUN dotnet publish -c release -o api
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /
 COPY --from=build ./api ./app
-COPY --from=build ./API/appsettings.json ./app/appsettings.json
+COPY --from=build ./WebApplication1/appsettings.json ./app/appsettings.json
 WORKDIR /app
 ENV ASPNETCORE_URLS http://*:7002
 ENV ASPNETCORE_ENVIRONMENT docker
