--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY *.csproj .
 
 RUN dotnet restore 
-COPY . ./
+COPY . .
 
 # copy and publish app and libraries
 #COPY . .
@@ -13,8 +13,8 @@ RUN dotnet publish -c release -o out
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /
-COPY --from=build ./appsettings.json ./appsettings.json
-WORKDIR /app
+COPY --from=build ./WebApplication1/appsettings.json ./WebApplication1/appsettings.json
+WORKDIR /app/WebApplication1/
 ENV ASPNETCORE_URLS http://*:7002
 ENV ASPNETCORE_ENVIRONMENT docker
 EXPOSE 7002
