--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -12,9 +12,9 @@ RUN dotnet publish -c release -o out
 
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
-WORKDIR /app/WebApplication1
+WORKDIR /app
 COPY --from=build ./WebApplication1/appsettings.json ./WebApplication1/appsettings.json
-WORKDIR /app/WebApplication1/
+WORKDIR /app
 ENV ASPNETCORE_URLS http://*:7002
 ENV ASPNETCORE_ENVIRONMENT docker
 EXPOSE 7002
