--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -3,8 +3,9 @@ WORKDIR /
 
 COPY *.sln ./
 COPY *.csproj ./WebApplication1/
-COPY WebApplication1/. ./WebApplication1/
 
+# copy and publish app and libraries
+COPY . .
 RUN dotnet restore ./WebApplication1/WebApplication1.csproj
 
 
