--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -5,7 +5,7 @@ COPY *.sln ./
 COPY *.csproj ./WebApplication1/
 
 # copy and publish app and libraries
-COPY . .
+
 RUN dotnet restore ./WebApplication1/WebApplication1.csproj
 
 
@@ -16,7 +16,8 @@ RUN dotnet publish -c release -o api
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /
-COPY --from=build ./WebApplication1/appsettings.json ./WebApplication1/appsettings.json
+COPY --from=build ./api ./app
+COPY --from=build ./WebApplication1/appsettings.json ./app/appsettings.json
 WORKDIR /app
 ENV ASPNETCORE_URLS http://*:7002
 ENV ASPNETCORE_ENVIRONMENT docker
