--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -1,11 +1,11 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /app
 
 COPY *.csproj .
 RUN dotnet restore
 COPY . ./
 RUN dotnet publish --no-restore -c Release -o out
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/core/aspnet:6.0 AS build
 WORKDIR /app
 COPY --from-build-env /app/out .
 ENTRYPOINT["dotnet","Api.dll"]
