--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -1,23 +1,20 @@
 ﻿# https://hub.docker.com/_/microsoft-dotnet
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /
+WORKDIR /app
 
-COPY *.sln ./
-COPY *.csproj ./Api/
 
-RUN dotnet restore ./Api/Api.csproj
+COPY *.csproj .
 
+RUN dotnet restore 
 
 # copy and publish app and libraries
-COPY . .
+COPY . ./
 RUN dotnet publish -c release -o api
 
 # final stage/image
-FROM mcr.microsoft.com/dotnet/aspnet:6.0
-WORKDIR /
-COPY --from=build ./api ./app
-COPY --from=build ./Api/appsettings.json ./app/appsettings.json
+FROM mcr.microsoft.com/dotnet/core/aspnet:6.0
 WORKDIR /app
+COPY --from=build-env app/api .
 ENV ASPNETCORE_URLS http://*:1000
 ENV ASPNETCORE_ENVIRONMENT docker
 EXPOSE 1000
