--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -1,21 +1,25 @@
 ﻿# https://hub.docker.com/_/microsoft-dotnet
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /app
+WORKDIR /
 
+COPY *.sln ./
+COPY Api/*.csproj ./Api/
 
-COPY *.csproj .
+COPY Api/. ./Api/
 
-RUN dotnet restore 
+RUN dotnet restore ./Api/Api.csproj
 
 # copy and publish app and libraries
-COPY . ./
+COPY . .
 RUN dotnet publish -c release -o api
 
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
+WORKDIR /
+COPY --from=build ./api ./app
+COPY --from=build ./Api/appsettings.json ./app/appsettings.json
 WORKDIR /app
-COPY --from=build-env app/api .
 ENV ASPNETCORE_URLS http://*:1000
 ENV ASPNETCORE_ENVIRONMENT docker
-EXPOSE 1000
+EXPOSE 7002
 ENTRYPOINT ["dotnet", "API.dll"]
