--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -3,7 +3,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /
 
 COPY *.sln ./
-COPY ./Api/ ./Api/
+COPY . ./Api/
 COPY *.csproj ./Api/
 
 
