--- a/Api/Dockerfile
+++ b/Api/Dockerfile
@@ -6,5 +6,5 @@ RUN dotnet publish -o /app/Api/published-app
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine as runtime
 WORKDIR /app
-COPY --from=build /app/published-app /app
+COPY --from=build /app/Api/published-app /app
 ENTRYPOINT [ "dotnet", "/app/Api/Api.dll" ]
