--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -6,10 +6,11 @@ EXPOSE 80
 EXPOSE 443
 
 COPY . .
+
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["WebApplication1.csproj", "."]
-RUN dotnet restore "./WebApplication1.csproj"
+RUN dotnet restore --interactive "./WebApplication1.csproj"
 COPY . .
 WORKDIR "/src/."
 RUN dotnet build "WebApplication1.csproj" -c Release -o /app/build
