--- a/WebApplication1/Dockerfile
+++ b/WebApplication1/Dockerfile
@@ -8,7 +8,7 @@ ENV ASPNETCORE_URLS=http://+:80
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["WebApplication1.csproj", "WebApplication1/"]
-RUN dotnet restore --interactive
+RUN dotnet restore --interactive "WebApplication1/WebApplication1.csproj"
 RUN dotnet restore "WebApplication1/WebApplication1.csproj"
 COPY . .
 
