--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
-          push: ${{ github.event.base_ref =='refs/heads/main/WebApplication1' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
+          context: ./
+          push: ${{ github.event.base_ref =='refs/heads/main/' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
