--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          dockerfile: ./WebApplication1/Dockerfile
+          dockerfile: ./WebApplication1/
           tags: ${{ steps.metadata.outputs.tags }}
 
       - name: Log in to Docker Hub
@@ -50,7 +50,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          dockerfile: ./WebApplication1/Dockerfile
+          dockerfile: ./WebApplication1/
           push: ${{ github.event.base_ref =='refs/heads/main/' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
