--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       IMG_NAME: ${{ github.repository }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Debug
         run: |
@@ -31,26 +31,17 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value={{sha}},enable=${{ github.ref_type != 'tag' }}
-      
-      - name: Build Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          dockerfile: ./WebApplication1/
-          tags: ${{ steps.metadata.outputs.tags }}
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         if: ${{ github.ref_type == 'tag' }}
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Push Docker image
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
-          dockerfile: ./WebApplication1/
-          push: ${{ github.event.base_ref =='refs/heads/main/' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
+          context: ./WebApplication1 
+          push: ${{ github.event.base_ref =='refs/heads/main' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
